# webserv

./: .clang-format  .clangd  .generate_compile_commands.sh  .gitignore  CMakeLists.txt  Doxyfile  INFO.md  Makefile  NGINX_TEST.md  README.md  campus-tester.conf  compile_commands.json  doxyfile-info.md  launch_tester.sh  test_cgi.conf  tester-campus.conf  tester.conf
config/: .conf  TODO.txt  default.conf  doxygen.conf  file.conf  file_backup.conf  global_unknown.conf  modifier_test.conf  test_cgi.conf  unknown_directive.conf
config/examples/: default.conf  nginx.conf
config/test-cases-cgi/: test_cgi.conf  test_cgi_campus.conf
configs/: default.conf
docs/: APUNTES_HTTP_PROCESSOR_CLIENT.md  NGINX_TEST.md  config_inheritance.md  index.html  laserweb_diagram.md
docs/allowed_functions/: TestServer.cpp
docs/html/: AutoindexRenderer_8cpp.html  AutoindexRenderer_8cpp.js  AutoindexRenderer_8cpp__incl.md5  AutoindexRenderer_8hpp.html  AutoindexRenderer_8hpp.js  AutoindexRenderer_8hpp__dep__incl.md5  AutoindexRenderer_8hpp__incl.md5  AutoindexRenderer_8hpp_a4cca9fd6a02bdef382cf07d24173b148_cgraph.md5  AutoindexRenderer_8hpp_a4cca9fd6a02bdef382cf07d24173b148_icgraph.md5  AutoindexRenderer_8hpp_aa6603dacef27e71df8be0deb73b1d4be_icgraph.md5  AutoindexRenderer_8hpp_source.html  CgiExecutor_8cpp.html  CgiExecutor_8cpp.js  CgiExecutor_8cpp__incl.md5  CgiExecutor_8cpp_abcb00127e3438f917615431df567802b_icgraph.md5  CgiExecutor_8hpp.html  CgiExecutor_8hpp__dep__incl.md5  CgiExecutor_8hpp__incl.md5  CgiExecutor_8hpp_source.html  CgiProcess_8cpp.html  CgiProcess_8cpp__incl.md5  CgiProcess_8hpp.html  CgiProcess_8hpp__dep__incl.md5  CgiProcess_8hpp__incl.md5  CgiProcess_8hpp_source.html  ClientCgi_8cpp.html  ClientCgi_8cpp.js  ClientCgi_8cpp__incl.md5  ClientCgi_8cpp_a8b77e6a9b66d57c486e83d946c0ae62a_cgraph.md5  ClientCgi_8cpp_a8b77e6a9b66d57c486e83d946c0ae62a_icgraph.md5  Client_8cpp.html  Client_8cpp__incl.md5  Client_8hpp.html  Client_8hpp.js  Client_8hpp__dep__incl.md5  Client_8hpp__incl.md5  Client_8hpp_source.html  ConfigException_8cpp.html  ConfigException_8cpp__incl.md5  ConfigException_8hpp.html  (+679 more)
nginx/: nginx  tester.conf
src/: main.cpp
src/cgi/: CgiExecutor.cpp  CgiExecutor.hpp  CgiProcess.cpp  CgiProcess.hpp
src/client/: AutoindexRenderer.cpp  AutoindexRenderer.hpp  Client.cpp  Client.hpp  ClientCgi.cpp  ErrorUtils.cpp  ErrorUtils.hpp  README.md  RequestProcessor.cpp  RequestProcessor.hpp  RequestProcessorUtils.cpp  ResponseUtils.cpp  ResponseUtils.hpp  SessionManager.cpp  SessionManager.hpp  SessionUtils.cpp  SessionUtils.hpp  StaticPathHandler.cpp  StaticPathHandler.hpp
src/common/: CMakeLists.txt  Types.hpp  constants.hpp  namespaces.hpp
src/config/: CMakeLists.txt  ConfigException.cpp  ConfigException.hpp  ConfigParser.cpp  ConfigParser.hpp  ConfigUtils.cpp  ConfigUtils.hpp  LocationConfig.cpp  LocationConfig.hpp  ServerConfig.cpp  ServerConfig.hpp  cmake_architecture_guide.md  flow-of-parsing  mainConfig.cpp
src/config/info/: config_uml.md  implementation_plan.md
src/http/: HttpHeaderUtils.cpp  HttpHeaderUtils.hpp  HttpParser.cpp  HttpParser.hpp  HttpParserBody.cpp  HttpParserHeaders.cpp  HttpParserStartLine.cpp  HttpRequest.cpp  README.md  (+3 more)
tests/: curl_body.md  manual_http_parser.cpp  manual_http_request.cpp
www/: about.html  ana.html  carles.html  cgi-flow.html  daru.html  index.html  squad_staff.html  squads.html  target-list.html  upload.html
(+152 files in other folders)
